@@ -95,6 +95,14 @@ Sandbox_EN = {
 	Sandbox_MoreTraits_AntiqueAnywhere_tooltip = "If true, Antique Collector trait will be able to find antique items anywhere, instead of only in crates and metal shelves.",
 	Sandbox_MoreTraits_HoarderCompatibility = "Hoarder trait stacking",
 	Sandbox_MoreTraits_HoarderCompatibility_tooltip = "If you run both More Traits and Expended Traits, they both have perks that update carry weight.<br>If this is checked on, Hoarder (from Expended Traits) and carry weight from this mod (Pack Mule/Mouse) will stack. Which means that whatever carry weight you get with Pack Mule/Pack Mouse will be multiplied by 1.25.<br>If this is checked off, and you have both perks (Hoarder and Pack Mule/Mouse) either Hoarder or Pack Mouse/Mule will run its code first meaing I honestly don't know if your max weight will be calculated by Hoarder code or Pack Mule code",
+	Sandbox_MoreTraits_SuperImmuneMinimum = "Super Immune Minimum Days",
+	Sandbox_MoreTraits_SuperImmuneMinimum_tooltip = "Minimum days that a Super Immune character takes to heal the sickness.",
+	Sandbox_MoreTraits_SuperImmuneMaximum = "Super Immune Maximum Days",
+	Sandbox_MoreTraits_SuperImmuneMaximum_tooltip = "Maximum days that a Super Immune character takes to heal the sickness.",
+	Sandbox_MoreTraits_SuperImmuneFirstInfectionBonus = "Super Immune Less Time After Curing",
+	Sandbox_MoreTraits_SuperImmuneFirstInfectionBonus_tooltip = "If true, any infections after the first one was cured will only last half as long.<br>Note: If caught multiple infections, it can still reach maximum days.",
+	Sandbox_MoreTraits_QuickSuperImmune = "Quick Super Immune",
+	Sandbox_MoreTraits_QuickSuperImmune_tooltip = "If true, Super Immune is 6 times faster than normal.<br>Preferably used in multiplayer games where you can't fast forward time.",
 	
 	Sandbox_MoreTraitsDynamic = "More Traits - Dynamic",
 	Sandbox_MoreTraitsDynamic_PackMouse = "Pack Mouse",
