@@ -201,7 +201,7 @@ UI_EN = {
 	UI_trait_terminator = "Terminator",
 	UI_trait_terminatordesc = "You're all man, no machine, but with firearm in hand, you may as well be a killing machine. Hasta la vista, baby.<br>25% extra damage from guns.<br>Doubled aiming speed, increased range, decreased panic and stress when holding a gun.<br>+3 Aiming, +2 Reloading, +1 Nimble.<br>You do not gain XP multiplier by this trait. The bonus levels do not show in character creation menu.",
 	UI_trait_unwavering = "Unwavering",
-	UI_trait_unwaveringdesc = "Penalty for movement speed from injuries is decreased.<br>You push back zombies when hit, has a hour cooldown.",
+	UI_trait_unwaveringdesc = "Penalty for movement speed from injuries is decreased.<br>You push back zombies when hit, has a day cooldown.",
 	UI_MoreTraits_Options_ScroungerAnnounce = "Announce Scrounger and Incomprehensive",
     UI_MoreTraits_Options_ScroungerAnnounce_ToolTip = "If you have the Scrounger or Incomprehensive trait, you will be notified if item(s) are found or lost.",
     UI_MoreTraits_Options_ScroungerHighlight = "Highlight Scrounger Containers",
